--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,6 @@ input {
   all: revert;
 }
 
-* {
-  font-family: Orbitron;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -43,46 +39,47 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* CSS */
-.button-8 {
-  background-color: #e1ecf4;
-  border-radius: 3px;
-  border: 1px solid #7aa7c7;
-  box-shadow: rgba(255, 255, 255, 0.7) 0 1px 0 0 inset;
-  box-sizing: border-box;
-  color: black;
-  cursor: pointer;
-  display: inline-block;
-  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
-    sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 1.15385;
-  margin: 0;
-  outline: none;
-  padding: 8px 0.8em;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: baseline;
-  white-space: nowrap;
+:root,
+input {
+  font-family: Orbitron;
 }
 
-.button-8:hover,
-.button-8:focus {
-  background-color: #b3d3ea;
-  color: #2c5777;
+.y2k-btn {
+  border-radius: 103.152px;
+  border: 0.868px solid #2fbc22;
+  opacity: 0.85;
+  width: 120px;
+  height: 30px;
+  filter: drop-shadow(0px 0px 18.586px rgba(32, 157, 21, 0.37));
+  box-shadow: 0px -25.788px 25.788px 0px #8cf683 inset;
+  background: linear-gradient(
+    180deg,
+    #fff 0%,
+    rgba(255, 255, 255, 0.55) 44.67%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
-.button-8:focus {
-  box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border-width: 6px;
+  border-color: black;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 99999;
+  animation: smoothTransition 0.15s forwards ease-in-out;
 }
 
-.button-8:active {
-  background-color: #a0c7e4;
-  box-shadow: none;
-  color: #2c5777;
+.overlay-modal {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99998;
+  animation: smoothTransition 0.15s forwards ease-in-out;
 }
