TT 11/30/24 Images are encrypted

--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,9 @@ button {
   z-index: 99998;
   animation: smoothTransition 0.15s forwards ease-in-out;
 }
+
+.container-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
